Fix packages and readme

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Boxes Scala.js</title>
+    <title>Tree</title>
   </head>
   <body>
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="../../../target/scala-2.11/boxes-scalajs-fastopt.js"></script>
+    <script type="text/javascript" src="../../../target/scala-2.11/tree-fastopt.js"></script>
     <!-- Run tutorial.webapp.TutorialApp -->
     <script type="text/javascript">
-      org.rebeam.boxes.scalajs.demo.DemoApp().main();
+      org.rebeam.tree.demo.DemoApp().main();
     </script>
   </body>
 </html>
