Moved support code to Tree, added scalajs-react

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -5,11 +5,15 @@
     <title>Tree</title>
   </head>
   <body>
+    
+    <div class="demo"></span>
+    
     <!-- Include Scala.js compiled code -->
     <script type="text/javascript" src="../../../target/scala-2.11/tree-fastopt.js"></script>
+    <script type="text/javascript" src="../../../target/scala-2.11/tree-jsdeps.js"></script>
     <!-- Run tutorial.webapp.TutorialApp -->
     <script type="text/javascript">
       org.rebeam.tree.demo.DemoApp().main();
-    </script>
+    </script>    
   </body>
 </html>
