Add Material Design Lite
Applied to the buttons and an input in the demo, seems to work fine.

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tree</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.indigo-pink.min.css" />
+    <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
+
   </head>
   <body>
     
-    <div class="demo"></span>
-    
+    <div class="content">
+
     <!-- Include Scala.js compiled code -->
     <script type="text/javascript" src="../../../target/scala-2.11/tree-fastopt.js"></script>
     <script type="text/javascript" src="../../../target/scala-2.11/tree-jsdeps.js"></script>
