Add websocket, rearrange packages.
Preparing to split into a cross compile project so we can add the
server code...

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -57,7 +57,7 @@
     <script type="text/javascript" src="../../../target/scala-2.11/tree-jsdeps.js"></script>
 
     <script type="text/javascript">
-      org.rebeam.tree.demo.DemoApp().main();
+      org.rebeam.tree.view.demo.ViewApp().main();
     </script>
   </body>
 </html>
