--- a/jvm/src/main/resources/index.html
+++ b/jvm/src/main/resources/index.html
@@ -53,8 +53,8 @@
     <div class="content">
 
      <!--Include Scala.js compiled code -->
-    <script type="text/javascript" src="../../../target/scala-2.11/tree-fastopt.js"></script>
-    <script type="text/javascript" src="../../../target/scala-2.11/tree-jsdeps.js"></script>
+    <script type="text/javascript" src="scalajs/tree-fastopt.js"></script>
+    <script type="text/javascript" src="scalajs/tree-jsdeps.js"></script>
 
     <script type="text/javascript">
       org.rebeam.tree.view.demo.ViewApp().main();
