Rename ViewApp to JSDemoApp to match server
Fix index.html to reference this

--- a/jvm/src/main/resources/index.html
+++ b/jvm/src/main/resources/index.html
@@ -57,7 +57,7 @@
     <script type="text/javascript" src="scalajs/tree-jsdeps.js"></script>
 
     <script type="text/javascript">
-      org.rebeam.tree.view.demo.ViewApp().main();
+      org.rebeam.tree.demo.JSDemoApp().main();
     </script>
   </body>
 </html>
