--- a/jvm/src/main/resources/index.html
+++ b/jvm/src/main/resources/index.html
@@ -7,52 +7,99 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <!--<link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.grey-amber.min.css" />-->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.blue_grey-orange.min.css" />
-    <script src="https://code.getmdl.io/1.2.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-orange.min.css" />
+    <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 
   </head>
   <body>
 
-      <!--<div class="mdl-layout mdl-js-layout mdl-layout&#45;&#45;fixed-header-->
-                <!--mdl-layout&#45;&#45;fixed-tabs">-->
-          <!--<header class="mdl-layout__header">-->
-              <!--<div class="mdl-layout__header-row">-->
-                  <!--&lt;!&ndash; Title &ndash;&gt;-->
-                  <!--<span class="mdl-layout-title">Title</span>-->
-              <!--</div>-->
-              <!--&lt;!&ndash; Tabs &ndash;&gt;-->
-              <!--<div class="mdl-layout__tab-bar mdl-js-ripple-effect">-->
-                  <!--<a href="#fixed-tab-1" class="mdl-layout__tab is-active">Tab 1</a>-->
-                  <!--<a href="#fixed-tab-2" class="mdl-layout__tab">Tab 2</a>-->
-                  <!--<a href="#fixed-tab-3" class="mdl-layout__tab">Tab 3</a>-->
-              <!--</div>-->
-          <!--</header>-->
-          <!--<div class="mdl-layout__drawer">-->
+  <!--<div class="mdl-layout mdl-js-layout mdl-layout&#45;&#45;fixed-header-->
+            <!--mdl-layout&#45;&#45;fixed-tabs">-->
+      <!--<header class="mdl-layout__header">-->
+          <!--<div class="mdl-layout__header-row">-->
+              <!--&lt;!&ndash; Title &ndash;&gt;-->
               <!--<span class="mdl-layout-title">Title</span>-->
-              <!--<nav class="mdl-navigation">-->
-                  <!--<a class="mdl-navigation__link" href="#fixed-tab-1">Nav link 1</a>-->
-                  <!--<a class="mdl-navigation__link" href="#fixed-tab-2">Nav link 2</a>-->
-                  <!--<a class="mdl-navigation__link" href="#fixed-tab-3">Nav link 3</a>-->
-              <!--</nav>-->
-
           <!--</div>-->
-          <!--<main class="mdl-layout__content">-->
-              <!--<section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">-->
-                  <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
-              <!--</section>-->
-              <!--<section class="mdl-layout__tab-panel" id="fixed-tab-2">-->
-                  <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
-              <!--</section>-->
-              <!--<section class="mdl-layout__tab-panel" id="fixed-tab-3">-->
-                  <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
-              <!--</section>-->
-          <!--</main>-->
+          <!--&lt;!&ndash; Tabs &ndash;&gt;-->
+          <!--<div class="mdl-layout__tab-bar mdl-js-ripple-effect">-->
+              <!--<a href="#fixed-tab-1" class="mdl-layout__tab is-active">Tab 1</a>-->
+              <!--<a href="#fixed-tab-2" class="mdl-layout__tab">Tab 2</a>-->
+              <!--<a href="#fixed-tab-3" class="mdl-layout__tab">Tab 3</a>-->
+          <!--</div>-->
+      <!--</header>-->
+      <!--<div class="mdl-layout__drawer">-->
+          <!--<span class="mdl-layout-title">Title</span>-->
+          <!--<nav class="mdl-navigation">-->
+              <!--<a class="mdl-navigation__link" href="#fixed-tab-1">Nav link 1</a>-->
+              <!--<a class="mdl-navigation__link" href="#fixed-tab-2">Nav link 2</a>-->
+              <!--<a class="mdl-navigation__link" href="#fixed-tab-3">Nav link 3</a>-->
+          <!--</nav>-->
+
       <!--</div>-->
+      <!--<main class="mdl-layout__content">-->
+          <!--<section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">-->
+              <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
+          <!--</section>-->
+          <!--<section class="mdl-layout__tab-panel" id="fixed-tab-2">-->
+              <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
+          <!--</section>-->
+          <!--<section class="mdl-layout__tab-panel" id="fixed-tab-3">-->
+              <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
+          <!--</section>-->
+      <!--</main>-->
+  <!--</div>-->
+
+
+
+
+
+
+
+
+    <!--<div class="mdl-layout mdl-js-layout mdl-layout&#45;&#45;fixed-header">-->
+      <!--<header class="mdl-layout__header">-->
+        <!--<div class="mdl-layout__header-row">-->
+          <!--&lt;!&ndash; Title &ndash;&gt;-->
+          <!--<span class="mdl-layout-title">Title</span>-->
+          <!--&lt;!&ndash; Add spacer, to align navigation to the right &ndash;&gt;-->
+          <!--<div class="mdl-layout-spacer"></div>-->
+          <!--&lt;!&ndash; Navigation. We hide it in small screens. &ndash;&gt;-->
+          <!--<nav class="mdl-navigation mdl-layout&#45;&#45;large-screen-only">-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+          <!--</nav>-->
+        <!--</div>-->
+      <!--</header>-->
+      <!--<div class="mdl-layout__drawer">-->
+        <!--<span class="mdl-layout-title">Title</span>-->
+        <!--<nav class="mdl-navigation">-->
+          <!--<a class="mdl-navigation__link" href="">Link</a>-->
+          <!--<a class="mdl-navigation__link" href="">Link</a>-->
+          <!--<a class="mdl-navigation__link" href="">Link</a>-->
+          <!--<a class="mdl-navigation__link" href="">Link</a>-->
+        <!--</nav>-->
+      <!--</div>-->
+      <!--<main class="mdl-layout__content">-->
+        <!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
+      <!--</main>-->
+    <!--</div>-->
+
+
+
+
+
+
+
+
+
+
 
 
     <div class="content">
 
-     <!--Include Scala.js compiled code -->
+    <!--Include Scala.js compiled code -->
     <script type="text/javascript" src="scalajs/tree-fastopt.js"></script>
     <script type="text/javascript" src="scalajs/tree-jsdeps.js"></script>
 
